--- a/assignment4/assignment4.html
+++ b/assignment4/assignment4.html
@@ -16,12 +16,16 @@
 <body>
 	<main>
 <h1 data-text="TRUST THE PROCESS">TRUST THE PROCESS</h1>
-
 	</main>
-</body>
-    
-	
-</html> 
+
+	<footer>
+ <p>&#169;SHAY WILDER 2024</p>
+ </footer>
+    </div><!--close "container"-->
+    </body>
+    </html>	
+
+
 
 
     
