--- a/assignment4/assignment4.html
+++ b/assignment4/assignment4.html
@@ -4,11 +4,18 @@
 
 <head>
 	
+	
 	<meta charset="utf-8">
 	
 	<title>Assignment4</title>
 	
-    <link rel="stylesheet" href="style.css">	</head>
+    <link rel="stylesheet" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
+
+
+</head>
    
     
    
