--- a/final-project.html
+++ b/final-project.html
@@ -39,7 +39,7 @@
                 <nav>
                 <ul>
             <li><a href="final-project-components/proposal.html">Proposal</a></li>
-            <li><a href="final-project-components/">Assets</a></li>
+            <li><a href="final-project-components/asset.pdf">Assets</a></li>
             <li><a href="final-project-components/">Rapid Prototype</a></li>  
             <li><a href="final-project-components/">Wireframes</a></li>  
             <li><a href="final-project-components/">Style Guide</a></li> 
