--- a/final-project.html
+++ b/final-project.html
@@ -41,7 +41,7 @@
             <li><a href="final-project-components/proposal.html">Proposal</a></li>
             <li><a href="final-project-components/asset.pdf">Assets</a></li>
             <li><a href="final-project-components/">Rapid Prototype</a></li>  
-            <li><a href="final-project-components/">Wireframes</a></li>  
+            <li><a href="final-project-components/wireframes.html">Wireframes</a></li>  
             <li><a href="final-project-components/">Style Guide</a></li> 
             <li><a href="final-project-components/">Hi-res Prototype</a></li>  
             <li><a href="final-project-components/">Final Project Website</a></li>
