--- a/assignment7/assignment7.html
+++ b/assignment7/assignment7.html
@@ -18,7 +18,6 @@
 
 <div id="container">
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/A3ZANxbbw-E?si=BnmIynEe8-u2o4UC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   
 <header>
 	<h1>GLOW SKINCARE</h1>
@@ -46,7 +45,9 @@
 	<figure>
 		<img src="img/mylogo.jpg" alt="Glow Skin">
 	</figure>
-
+</figure>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/A3ZANxbbw-E?si=BnmIynEe8-u2o4UC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  
 
 
 <!-- <section> is the second child of <main> -->
