--- a/final-project.html
+++ b/final-project.html
@@ -44,7 +44,8 @@
             <li><a href="final-project-components/mobilewireframes.html">Mobile Wireframes</a></li>  
             <li><a href="final-project-components/desktopwireframes.html">Desktop Wireframes</a></li>  
             <li><a href="final-project-components/styleguide.pdf">Style Guide</a></li> 
-            <li><a href="final-project-components/">Hi-res Prototype</a></li>  
+            <li><a href="final-project-components/">Hi-res Mobile</a></li>  
+            <li><a href="final-project-components/">Hi-res Desktop</a></li>  
             <li><a href="final-project-components/">Final Project Website</a></li>
                 </ul>
                 </nav>
