--- a/final-project-components/hiresmobile.html
+++ b/final-project-components/hiresmobile.html
@@ -7,7 +7,7 @@
 	
 	<meta charset="utf-8">
 	
-	<title>high res mobile</title>
+	<title>hi res mobile</title>
 	
 	<link rel="stylesheet" href="css/style.css">	
 	
