--- a/final-project.html
+++ b/final-project.html
@@ -45,7 +45,7 @@
             <li><a href="final-project-components/desktopwireframes.html">Desktop Wireframes</a></li>  
             <li><a href="final-project-components/styleguide.pdf">Style Guide</a></li> 
             <li><a href="final-project-components/hiresmobile.html">Hi-res Mobile</a></li>  
-            <li><a href="final-project-components/">Hi-res Desktop</a></li>  
+            <li><a href="final-project-components/hiresdesktop.html">Hi-res Desktop</a></li>  
             <li><a href="final-project-components/">Final Project Website</a></li>
                 </ul>
                 </nav>
