--- a/final-project.html
+++ b/final-project.html
@@ -46,12 +46,8 @@
             <li><a href="final-project-components/styleguide.pdf">Style Guide</a></li> 
             <li><a href="final-project-components/hiresmobile.html">Hi-res Mobile</a></li>  
             <li><a href="final-project-components/hiresdesktop.html">Hi-res Desktop</a></li> 
-                    <li><a href="final-project-components/home.html">Final Project P1</a></li>
-                    <li><a href="final-project-components/about.html">Final Project P2</a></li>
-                    <li><a href="final-project-components/products.html">Final Project P3</a></li>
-                    <li><a href="final-project-components/reviews.html">Final Project P4</a></li>
-                    <li><a href="final-project-components/memorial.html">Final Project P5</a></li>
-                    <li><a href="final-project-components/conclusion.html">Final Project P6</a></li>
+            <li><a href="final-project-components/finalproject.html">Final Project</a></li>
+                    
                 </ul>
                 </nav>
             
