--- a/final-project.html
+++ b/final-project.html
@@ -27,7 +27,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="bio.html">Bio</a></li>
             <li><a href="assignments.html">Assignments</a></li>
-            <li><a href="final-project.html">Final Project</a></li>
+            <li><a href="final-project.html">Final Project Website</a></li>
          </ul>
         </nav>
         
@@ -46,7 +46,7 @@
             <li><a href="final-project-components/styleguide.pdf">Style Guide</a></li> 
             <li><a href="final-project-components/hiresmobile.html">Hi-res Mobile</a></li>  
             <li><a href="final-project-components/hiresdesktop.html">Hi-res Desktop</a></li> 
-            <li><a href="final-project-components/final-project.html">Final Project</a></li>
+            <li><a href="final-project-components/final-project.html">Final Project Website</a></li>
                     
                 </ul>
                 </nav>
