--- a/final-project.html
+++ b/final-project.html
@@ -46,7 +46,7 @@ x
             <li><a href="final-project-components/styleguide.pdf">Style Guide</a></li> 
             <li><a href="final-project-components/hiresmobile.html">Hi-res Mobile</a></li>  
             <li><a href="final-project-components/hiresdesktop.html">Hi-res Desktop</a></li> 
-            <li><a href="final-project-components/final-project/index.html">Final Project Website</a></li>
+            <li><a href="final-project-components/final-project">Final Project Website</a></li>
                     
                 </ul>
                 </nav>
